--- a/IqansAppsForCTS/IqansAppsForCTS.csproj
+++ b/IqansAppsForCTS/IqansAppsForCTS.csproj
@@ -39,6 +39,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EPPlus">
+      <HintPath>C:\Users\Iqan.Shaikh\Downloads\EPPlus.dll</HintPath>
+    </Reference>
+    <Reference Include="ForecastToolMethods">
+      <HintPath>..\..\..\..\Work\ToolForDevOps\ForecastToolMethods\ForecastToolMethods\bin\Debug\ForecastToolMethods.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -169,6 +175,7 @@
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\MeetingRoom.cs" />
+    <Compile Include="Models\Resources.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
