--- a/IqansAppsForCTS/IqansAppsForCTS.csproj
+++ b/IqansAppsForCTS/IqansAppsForCTS.csproj
@@ -183,6 +183,7 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Images\Under-Construction1.jpg" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
