--- a/IqansAppsForCTS/Web.config
+++ b/IqansAppsForCTS/Web.config
@@ -10,8 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-IqansAppsForCTS-20160513075731.mdf;Initial Catalog=aspnet-IqansAppsForCTS-20160513075731;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="MeetingRoomManagerEntities" connectionString="metadata=res://*/Models.MeetingRoomModel.csdl|res://*/Models.MeetingRoomModel.ssdl|res://*/Models.MeetingRoomModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=iqan-asos.database.windows.net;initial catalog=MeetingRoomManager;persist security info=True;user id=iqan;password=Leesin#12;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="MeetingRoomManagerEntities1" connectionString="metadata=res://*/Models.BookingNew.csdl|res://*/Models.BookingNew.ssdl|res://*/Models.BookingNew.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=iqan-asos.database.windows.net;initial catalog=MeetingRoomManager;persist security info=True;user id=iqan;password=Leesin#12;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="MeetingRoomManagerEntities" connectionString="metadata=res://*/Models.BookingNew.csdl|res://*/Models.BookingNew.ssdl|res://*/Models.BookingNew.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=iqan-asos.database.windows.net;initial catalog=MeetingRoomManager;persist security info=True;user id=iqan;password=Leesin#12;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
